objects/ASI_eForm_Corp_Card_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Card_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corp_Card_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Corp_Card_Employee_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corp Card Employee Mapping</label>
        <referenceTo>ASI_TnE_Corp_Card_Employee_Mapping__c</referenceTo>
        <relationshipLabel>Corp Card Requests</relationshipLabel>
        <relationshipName>Corp_Card_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Corp_Card_No__c</fullName>
        <label>Corp Card No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Credit_Limit_After__c</fullName>
        <formula>ASI_eForm_Credit_Limit_Current__c + ASI_eForm_Credit_Limit_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit(After)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Credit_Limit_Current__c</fullName>
        <label>Credit Limit(Current)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Credit_Limit_Request__c</fullName>
        <label>Credit Limit(Request)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Date_of_Application__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Name__c</fullName>
        <formula>Owner:User.LastName  + &apos; &apos;+  Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Period_From__c</fullName>
        <label>Period(From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Period_To__c</fullName>
        <inlineHelpText>To date는 말일자로 지정해 주십시오.</inlineHelpText>
        <label>Period(To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason_Change__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>마그네틱 손상</fullName>
                </value>
                <value>
                    <fullName>분실</fullName>
                </value>
                <value>
                    <fullName>기타 (본인입력)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Report_to_the_card_company_YN__c</fullName>
        <formula>if( ASI_eForm_Report_to_the_card_company__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report to the card company (Y/N)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Report_to_the_card_company__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Report to the card company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corp_Card_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Type__c</fullName>
        <formula>IF(
  CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_KR_CC_Request_New&apos;), &apos;New&apos;,
IF(
  CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_KR_CC_Request_Reissue&apos;), &apos;Reissue&apos;,
IF(
  CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_KR_CC_Request_Change&apos;), &apos;Change of Credit Limit&apos;,
IF(
  CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_KR_CC_Request_Suspension&apos;), &apos;Suspension&apos;,
IF(
  CONTAINS( RecordType.DeveloperName, &apos;ASI_eForm_KR_CC_Request_Cancellation&apos;), &apos;Cancellation&apos;,
  &apos;&apos;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_this_month_transactions_YN__c</fullName>
        <formula>if( ASI_eForm_this_month_transactions__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request for this month transactions(Y/N)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_this_month_transactions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Request for this month transactions</label>
        <type>Checkbox</type>
    </fields>
    <label>Corp Card Request</label>
    <listViews>
        <fullName>ASI_eForm_KR_Cancellation</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Cancellation,ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Cancellation_RO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Cancellation_Approval</value>
        </filters>
        <label>KR - Cancellation</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_KR_Change_Credit_Limit</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Change,ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Change_RO</value>
        </filters>
        <label>KR - Change Credit Limit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_KR_New</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_New,ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_New_RO</value>
        </filters>
        <label>KR - New</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_KR_Reissue</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Reissue,ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Reissue_Read_Only</value>
        </filters>
        <label>KR - Reissue</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_KR_Suspension</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Suspension,ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Suspension_RO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Corp_Card_Request__c.ASI_eForm_KR_CC_Request_Suspension_Approval</value>
        </filters>
        <label>KR - Suspension</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Branch_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Job_Title__c</columns>
        <columns>ASI_eForm_Card_Holder__c</columns>
        <columns>ASI_eForm_Corp_Card_No__c</columns>
        <columns>ASI_eForm_Date_of_Application__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCR-{000000}</displayFormat>
        <label>Corporate Card Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corp Card Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Cancellation</fullName>
        <active>true</active>
        <label>KR CC Request Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Cancellation_Approval</fullName>
        <active>true</active>
        <label>KR CC Request Cancellation (Approval)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Cancellation_RO</fullName>
        <active>true</active>
        <label>KR CC Request Cancellation (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Change</fullName>
        <active>true</active>
        <label>KR CC Request Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Change_RO</fullName>
        <active>true</active>
        <label>KR CC Request Change (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_New</fullName>
        <active>true</active>
        <label>KR CC Request New</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_New_RO</fullName>
        <active>true</active>
        <label>KR CC Request New (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Reissue</fullName>
        <active>true</active>
        <label>KR CC Request Reissue</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Reissue_Read_Only</fullName>
        <active>true</active>
        <label>KR CC Request Reissue (Read-Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Suspension</fullName>
        <active>true</active>
        <label>KR CC Request Suspension</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Suspension_Approval</fullName>
        <active>true</active>
        <label>KR CC Request Suspension (Approval)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request_Suspension_RO</fullName>
        <active>true</active>
        <label>KR CC Request Suspension (Read-Only)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_KR_CheckPeriod</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   OR(
     CONTAINS(RecordType.DeveloperName, &apos;ASI_eForm_KR_CC&apos;),
     CONTAINS(RecordType.DeveloperName, &apos;ASI_eForm_KR_Suspension&apos;)
   ),
   ASI_eForm_Period_From__c &gt; ASI_eForm_Period_To__c
)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Period_To__c</errorDisplayField>
        <errorMessage>Please input a reasonable period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_KR_Remarks_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
CONTAINS( RecordType.DeveloperName , &quot;ASI_eForm_KR_CC&quot;), 
OR( 
AND(TEXT(ASI_eForm_Reason__c) = &quot;기타 (본인입력)&quot;, ISBLANK(ASI_eForm_Remarks__c) ),
AND(TEXT(PRIORVALUE(ASI_eForm_Reason__c)) != TEXT(ASI_eForm_Reason__c), TEXT(ASI_eForm_Reason__c) = &quot;기타 (본인입력)&quot;, ISBLANK(ASI_eForm_Remarks__c) ), 
AND(ISBLANK(ASI_eForm_Remarks__c), NOT(ISBLANK(PRIORVALUE(ASI_eForm_Remarks__c))), TEXT(ASI_eForm_Reason__c) = &quot;기타 (본인입력)&quot; ) 
))</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Remarks__c</errorDisplayField>
        <errorMessage>Please enter remarks in case you choose &quot;기타(본인입력)&quot; as a reason.</errorMessage>
    </validationRules>
</CustomObject>